--- a/assignment1-handout/app/package.json
+++ b/assignment1-handout/app/package.json
@@ -10,6 +10,7 @@
   "author": "Tarek Idriss",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1146.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
