--- a/assignment1-handout/app/docker/Dockerfile
+++ b/assignment1-handout/app/docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:15-alpine
 
-WORKDIR /Cloud_Assignment3/assignment1-handout/app/
+WORKDIR /user/app
 
 COPY ./package .json ./
 RUN npm install
 COPY ./ ./
 
-CMD ["npm"]["start"]
+CMD ["npm","start"]
